[package]
name = "pong"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16"
avian2d = "0.3"
bevy_ui = "0.17.2"
bevy_text = "0.16"
rand = "0.9.2"
serde = {version = "1.0.228", features = ["derive"]}
bincode = "1.3"

[[bin]]
name = "pong_client"
path = "src/pong_client.rs"

[[bin]]
name = "pong_main"
path = "src/main.rs"